--- a/student/templates/subject.html
+++ b/student/templates/subject.html
@@ -8,10 +8,10 @@
 		<p>WELCOME!!</p>
 	{% endif %}
 
-	<h3>COURSE</h3>
-	<p>{{ courses.count }} courses</p>
-	{% for course in courses %}
-	<p>{{ course.course_name}} {{ course.course_description}} </p>
+	<h3>SUBJECT</h3>
+	<p>{{ subjects.count }} subjects</p>
+	{% for subject in subjects %}
+	<p>{{ subject.subject_name}} {{ subject.subject_description}} </p>
 	{% endfor %}
 
 </body>
